# gymnassic

./: .gitconfig  .gitignore  README.md  gym_profile.yaml  gym_schema.json  manage.py  pyproject.toml
applications/gym_setup/: apps.py
applications/membership/: apps.py
applications/middlewares/: user.py
applications/user/: apps.py  models.py
applications/user_management/: apps.py
config/: asgi.py  roles.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  databases.py  development.py  envcommon.py  factory.py  gymconf.py  local.py  production.py
modules/auth/: auth_rules.py
modules/user/: models.py
modules/user/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_phone_number.py
modules/user/tests/: conftest.py  test_age_dob.py  test_auth_login.py  test_contact_communication.py  test_data_integrity.py  test_identity_uniqueness.py  test_kyc_verification.py  test_lifecycle.py  test_privacy_security.py
shared/: base_models.py  monad.py
tests/: conftest.py  models.py  test_database.py  test_database_settings.py  test_deployment_scenarios.py  test_env_settings.py  test_gym_config.py  test_settings.py  test_settings_factory.py
