[project]
name = "gymnassic"
version = "0.1.0"
description = "Web Application for Simple Gym Management System"
author = [
    { name = "Rendbagoez",email = "kidmend58@gmail.com" }
]

readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "django>=6.0.2",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "pillow>=12.1.1",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pydantic-settings-yaml>=0.2.0",
    "pyyaml>=6.0.3",
    "dependency-injector>=4.48.3",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "faker>=40.4.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.12.0",
]
formatting = [
    "black>=26.1.0",
    "ruff>=0.15.1",
]

[tool.black]
line-length = 88
target-version = ['py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 125
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "DJ",     # flake8-django
]
ignore = [
    "E501",   # line too long (handled by black)
    "E301",   # expected 1 blank line, found 0
    "E302",   # expected 2 blank lines, found 1
    "E303",   # too many blank lines
    "E304",   # blank lines found after function decorator
    "E305",   # expected 2 blank lines after class or function definition
    "E306",   # expected 1 blank line before a nested definition
    "B008",   # do not perform function calls in argument defaults
    "DJ001",  # avoid using null=True on string-based fields
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"*/migrations/*.py" = ["E501", "DJ001"]  # Django migrations

[tool.ruff.lint.isort]
known-first-party = ["gymnassic"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py", "tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=config",
    "--cov=modules",
    "--cov=shared",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--reuse-db",
]
testpaths = ["tests"]
django_find_project = false
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["gymnassic"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/manage.py",
    "*/wsgi.py",
    "*/asgi.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
